--- a/index.html
+++ b/index.html
@@ -3,10 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CRACKERS</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hello git</h1>
+   <header class="header">
+       <nav>
+           <div class="container d-flex" >
+               <a href="#!" class="header">
+                   <img src="images/New Taste Crackers _Toshkent_.png" alt="header">
+               </a>
+           </div>
+       </nav>
+   </header>
 </body>
 </html>
